# snowsure-mcp

./: CLAUDE.md  Dockerfile  LICENSE  PUBLISHING.md  README.md  glama.json  server.json
.cursor/rules/: snowsure.mdc
go-sdk/: go.mod  snowsure.go  snowsure_test.go
python-sdk/: .gitignore  README.md  pyproject.toml  skills-lock.json
python-sdk/.agents/skills/snowsure/: SKILL.md
python-sdk/.claude/skills/: snowsure
python-sdk/src/snowsure/: __init__.py  cli.py  client.py
python-sdk/tests/: test_client.py
